[package]
name = "pin-project-lite"
version = "0.2.8"
edition = "2018"
rust-version = "1.37"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/pin-project-lite"
keywords = ["pin", "macros"]
categories = ["no-std", "rust-patterns"]
exclude = ["/.*", "/tools"]
description = """
A lightweight version of pin-project written with declarative macros.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = [
    "tests/doc",
    "tests/no-core",
    "tests/no-std",
]

[features]
rustc-dep-of-std = ["core", "compiler_builtins"]

[dependencies]
core = { package = "rustc-std-workspace-core", version = "1", optional = true }
compiler_builtins = { version = "0.1", optional = true }

[dev-dependencies]
macrotest = "1.0.8"
rustversion = "1"
static_assertions = "1"
trybuild = "1.0.49"
